# spy_on_your_work

./: LICENSE  README.md  generate.bat  pubspec.yaml
.github/workflows/: build.yml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/: app_info.dart
lib/src/app/: app.dart
lib/src/app/app_calendar/: app_calendar_notifier.dart  app_calendar_screen.dart  (+1 more)
lib/src/common/: logger.dart  toast.dart
lib/src/isar/: app_record.dart  app_record.g.dart  app_screenshot_record.dart  app_screenshot_record.g.dart  apps.dart  apps.g.dart  database.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  spy_api.rs
rust/src/spy/: api.rs  mod.rs  model.rs  tests.rs
rust/src/spy/platform/: macos.rs  mod.rs  window_capture.rs  windows.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_spy_on_your_work.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_spy_on_your_work.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+31 files in other folders)
